add examplatory picture
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/example/bitshares-widget-voting.html
+++ b/example/bitshares-widget-voting.html
@@ -7,7 +7,7 @@
   <link href=static/css/app.ba6a20aad83e5e00ac3d741decc50180.css rel=stylesheet>
 </head>
 <body>
-<div id=bitshares-widget-voting workerid=1.14.109;1.14.112;1.14.102>
+<div id=bitshares-widget-voting workerid=1.14.109;1.14.80>
   <script type=text/javascript src=static/js/manifest.e59f756d3b7719698690.js></script>
   <script type=text/javascript src=static/js/vendor.395204aae27a329c9624.js></script>
   <script type=text/javascript src=static/js/app.250d1cde8ce7506b3ac8.js></script>
