support inline voting
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/example/standalone/bitshares-widget-voting.html
+++ b/example/standalone/bitshares-widget-voting.html
@@ -4,12 +4,26 @@
     <meta charset=utf-8>
     <meta name=viewport content="width=device-width,initial-scale=1">
     <title>BitShares Widget for Voting</title>
-    <link href=static/css/app.267f078d31f20db1dee01b6903a715ee.css rel=stylesheet>
+    <link href=static/css/app.62dc57c6912444a01330f229552394e3.css rel=stylesheet>
 </head>
 <body>
-<div id=bitshares-widget-voting workerid=1.14.107;1.14.112;1.14.108>
-    <script type=text/javascript src=static/js/manifest.37f0a7cc18caee227728.js></script>
-    <script type=text/javascript src=static/js/vendor.942b6f290bf491fa0e6d.js></script>
-    <script type=text/javascript src=static/js/app.e2fd8b6a39dcf3f86054.js></script>
+    This is a simple example
+    <table>
+        <tr>
+            <td><!-- built files will be auto injected, see src/main.js -->
+                This is the inline voting voting widget <span id="bitshares-widget-voting-2" witnessid="1.6.117" layout="inline" ></span> that can be in text.
+            </td>
+        </tr>
+        <tr>
+            <td>
+                This is the normal voting widget
+                <div id="bitshares-widget-voting-1" workerid="1.14.112;1.14.108"></div>
+            </td>
+        </tr>
+    </table>
+
+    <script type=text/javascript src=static/js/manifest.f58a3d8a81901b855afd.js></script>
+    <script type=text/javascript src=static/js/vendor.662dfaffeb2b5491b00a.js></script>
+    <script type=text/javascript src=static/js/app.f83ba6f787bda3ee08ac.js></script>
 </body>
 </html>
