--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
     <title>BitShares Widget for Voting</title>
   </head>
   <body>
-    <div id="bitshares-widget-voting" workerid="1.14.107;1.14.112;1.14.108" />
-    <!-- built files will be auto injected, see src/main.js -->
+  This is a simple example
+  <table>
+      <tr>
+          <td><!-- built files will be auto injected, see src/main.js -->
+              This is the inline voting voting widget <span id="bitshares-widget-voting-2" witnessid="1.6.117" layout="inline" ></span> that can be in text.
+          </td>
+      </tr>
+      <tr>
+          <td>
+              This is the normal voting widget
+              <div id="bitshares-widget-voting-1" workerid="1.14.112;1.14.108"></div>
+          </td>
+      </tr>
+  </table>
   </body>
 </html>
