fix inline styling

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   This is a simple example
   <table>
       <tr>
-          <td><!-- built files will be auto injected, see src/main.js -->
-              This is the inline voting voting widget <span id="bitshares-widget-voting-2" witnessid="1.6.117" layout="inline" ></span> that can be in text.
+          <td>This is the inline voting voting widget for witnesses
+              (e.g. <span id=bitshares-widget-voting-2 witnessid=1.6.117 layout=inline></span>)
+              but also workers (e.g. <span id=bitshares-widget-voting-3 workerid=1.14.112 layout=inline></span>) that can be in text.
           </td>
       </tr>
       <tr>
