--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <table>
       <tr>
           <td>This is the inline voting voting widget for witnesses
-              (e.g. <span id=bitshares-widget-voting-2 witnessid=1.6.117 layout=inline></span>)
-              but also workers (e.g. <span id=bitshares-widget-voting-3 workerid=1.14.112 layout=inline></span>) that can be in text.
+              (e.g. <span id=bitshares-widget-voting-2 witnessid=1.6.117 layout=inline>clockwork</span>)
+              but also workers (e.g. <span id=bitshares-widget-voting-3 workerid=1.14.112 layout=inline>201808-bitshares-ui</span>) that can be in text.
           </td>
       </tr>
       <tr>
