Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/example/standalone/bitshares-widget-voting.html
+++ b/example/standalone/bitshares-widget-voting.html
@@ -4,7 +4,6 @@
     <meta charset=utf-8>
     <meta name=viewport content="width=device-width,initial-scale=1">
     <title>BitShares Widget for Voting</title>
-    <link href=static/css/app.62dc57c6912444a01330f229552394e3.css rel=stylesheet>
 </head>
 <body>
     This is a simple example
@@ -22,8 +21,11 @@
         </tr>
     </table>
 
-    <script type=text/javascript src=static/js/manifest.f58a3d8a81901b855afd.js></script>
-    <script type=text/javascript src=static/js/vendor.662dfaffeb2b5491b00a.js></script>
-    <script type=text/javascript src=static/js/app.f83ba6f787bda3ee08ac.js></script>
+<script type=text/javascript src=static/js/bitshares-widget-voting.0.1.manifest.js></script>
+<script type=text/javascript src=static/js/bitshares-widget-voting.0.1.vendor.js></script>
+<script type=text/javascript src=static/js/bitshares-widget-voting.0.1.js></script>
+
+<link href=static/css/bitshares-widget-voting.0.1.css rel=stylesheet>
+<link href=static/css/bitshares-widget-voting.0.1.redefine.css rel=stylesheet>
 </body>
 </html>
