cleaner DOM and consistent use of abstract base widget
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/example/standalone/bitshares-widget-voting.html
+++ b/example/standalone/bitshares-widget-voting.html
@@ -21,11 +21,11 @@
         </tr>
     </table>
 
-<script type=text/javascript src=static/js/bitshares-widget-voting.0.1.manifest.js></script>
-<script type=text/javascript src=static/js/bitshares-widget-voting.0.1.vendor.js></script>
-<script type=text/javascript src=static/js/bitshares-widget-voting.0.1.js></script>
+<script type=text/javascript src=static/js/bitshares-widget-voting.manifest.js></script>
+<script type=text/javascript src=static/js/bitshares-widget-voting.vendor.js></script>
+<script type=text/javascript src=static/js/bitshares-widget-voting.js></script>
 
-<link href=static/css/bitshares-widget-voting.0.1.css rel=stylesheet>
-<link href=static/css/bitshares-widget-voting.0.1.redefine.css rel=stylesheet>
+<link href=static/css/bitshares-widget-voting.css rel=stylesheet>
+<link href=static/css/bitshares-widget-voting.redefine.css rel=stylesheet>
 </body>
 </html>
