optionally remove title
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/example/standalone/bitshares-widget-voting.html
+++ b/example/standalone/bitshares-widget-voting.html
@@ -10,7 +10,7 @@
     <table>
         <tr>
             <td><!-- built files will be auto injected, see src/main.js -->
-                This is the inline voting voting widget <span id="bitshares-widget-voting-2" witnessid="1.6.117" layout="inline" ></span> that can be in text.
+                This is the inline voting voting widget <span id="bitshares-widget-voting-2" witnessid="1.6.117" layout="inline" >clockwork</span> that can be in text.
             </td>
         </tr>
         <tr>
