--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
               This is the normal voting widget
               <div id="bitshares-widget-voting-1" workerid="1.14.112;1.14.108"></div>
           </td>
+          <td>
+              Also possible without that header
+              <div id="bitshares-widget-voting-5" workerid="1.14.112;1.14.108" layout=tiles-noheader></div>
+          </td>
       </tr>
   </table>
   </body>
