--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
               but also workers (e.g. <span id=bitshares-widget-voting-3 objectid=1.14.112 layout=inline>201808-bitshares-ui</span>) that can be in text.
           </td>
       </tr>
-      <!--<tr>-->
-          <!--<td>-->
-              <!--This is the normal voting widget-->
-              <!--<div id="bitshares-widget-voting-1" workerid="1.14.112;1.14.108"></div>-->
-          <!--</td>-->
-          <!--<td>-->
-              <!--Also possible without that header-->
-              <!--<div id="bitshares-widget-voting-5" workerid="1.14.112;1.14.108" layout=tiles-noheader></div>-->
-          <!--</td>-->
-      <!--</tr>-->
+      <tr>
+          <td>
+              This is the normal voting widget
+              <div id="bitshares-widget-voting-1" objectid="1.14.112;1.14.108"></div>
+          </td>
+          <td>
+              Also possible without that header
+              <div id="bitshares-widget-voting-5" objectid="1.14.112;1.14.108" layout=tiles-noheader></div>
+          </td>
+      </tr>
   </table>
   </body>
 </html>
