--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <tr>
           <td>This is the inline voting voting widget for witnesses
               (e.g. <span id=bitshares-widget-voting-2 objectid=1.6.117 layout=inline>clockwork</span>)
-              but also workers (e.g. <span id=bitshares-widget-voting-3 objectid=1.14.165 layout=inline>201902-bitshares-ui</span>) that can be in text.
+              but also workers (e.g. <span id=bitshares-widget-voting-3 objectid=1.14.165 layout=inline-button>201902-bitshares-ui</span>) that can be in text.
           </td>
       </tr>
       <tr>
